@@ -1048,7 +1048,6 @@ sub consolidateReportInfoQueries
             query        => {
                 select => 'nusers',
                 from   => 'remoteservices_passwd_users',
-                key    => 'nusers',
                }
            }
        ];
